[gd_scene load_steps=6 format=3 uid="uid://yupa5xejatq"]

[ext_resource type="Texture2D" uid="uid://bgtxu8mtyvg5f" path="res://assets/ui/panel_beige.png" id="1_utm8d"]
[ext_resource type="Script" path="res://level_button/level_buttton.gd" id="2_cmi5g"]
[ext_resource type="FontFile" uid="uid://cex1484v4d1xa" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="2_e2a4l"]

[sub_resource type="LabelSettings" id="LabelSettings_eirxh"]
font = ExtResource("2_e2a4l")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_5py51"]
font = ExtResource("2_e2a4l")
font_size = 20

[node name="level_buttton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_utm8d")
script = ExtResource("2_cmi5g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -40.0
offset_right = 41.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="levellabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_eirxh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="scorelabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1000
"
label_settings = SubResource("LabelSettings_5py51")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
